tests/baselines/reference/wideningTuples3.errors.txt
tests/cases/conformance/types/tuple/wideningTuples3.ts(3,5): error TS7005: Variable 'b' implicitly has an '[any, any]' type.
tests/cases/conformance/types/tuple/wideningTuples3.ts(3,9): error TS2322: Type '[undefined, null]' is not assignable to type '[any]'.
  Types of property 'length' are incompatible.
    Type '2' is not assignable to type '1'.


==== tests/cases/conformance/types/tuple/wideningTuples3.ts (2 errors) ====
    var a: [any];
    
    var b = a = [undefined, null];
        ~
!!! error TS7005: Variable 'b' implicitly has an '[any, any]' type.
            ~
!!! error TS2322: Type '[undefined, null]' is not assignable to type '[any]'.
!!! error TS2322:   Types of property 'length' are incompatible.
!!! error TS2322:     Type '2' is not assignable to type '1'.